--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
-  "name": "module2",
-  "version": "1.0.0",
-  "description": "This is the data selfie app by looks label",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-   
-  },
-  "keywords": [
-    "example",
-    "data",
-    "selfie"
-  ],
-  "author": "abhi",
-  "license": "MIT",
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "heroku": "^7.39.2",
-    "nedb": "^1.8.0"
-  }
+	"name": "module2",
+	"version": "1.0.0",
+	"description": "This is the data selfie app by looks label",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"dev": "nodemon index.js"
+	},
+	"keywords": [
+		"example",
+		"data",
+		"selfie"
+	],
+	"author": "abhi",
+	"license": "MIT",
+	"dependencies": {
+		"@firebase/app": "^0.6.1",
+		"@google-cloud/firestore": "^3.7.3",
+		"@google-cloud/storage": "^4.7.0",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"firebase-admin": "^8.10.0",
+		"heroku": "^7.39.2",
+		"mongoose": "^5.9.7",
+		"multer": "^1.4.2",
+		"nedb": "^1.8.0"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.2"
+	}
 }
