--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
 	"description": "This is the data selfie app by looks label",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js",
-		"dev": "nodemon index.js"
+		"start": "nodemon index.js"
 	},
 	"keywords": [
 		"example",
@@ -19,8 +18,9 @@
 		"@google-cloud/storage": "^4.7.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-session": "^1.17.0",
 		"firebase-admin": "^8.10.0",
-		"multer": "^1.4.2",
+		"firebaseui": "^4.5.0",
 		"uuid": "^7.0.3"
 	},
 	"devDependencies": {
