--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "This is the data selfie app by looks label",
 	"main": "index.js",
 	"scripts": {
-		"start": "nodemon index.js"
+		"dev": "nodemon index.js",
+		"start": "node index.js"
 	},
 	"keywords": [
 		"example",
