--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
 		"express": "^4.17.1",
 		"firebase-admin": "^8.10.0",
 		"firebaseui": "^4.5.0",
+		"multer": "^1.4.2",
 		"uuid": "^7.0.3"
 	},
-	"devDependencies": {}
+	"devDependencies": {
+		"nodemon": "^2.0.3"
+	}
 }
