--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "This is the data selfie app by looks label",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js"
+		"start": "node app.js"
 	},
 	"keywords": [
 		"example",
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@google-cloud/firestore": "^3.7.3",
 		"@google-cloud/storage": "^4.7.0",
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"firebase-admin": "^8.10.0",
