--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"firebase-admin": "^8.10.0",
 		"firebaseui": "^4.5.0",
 		"multer": "^1.4.2",
+		"multer-google-storage": "^1.3.0",
 		"uuid": "^7.0.3"
 	},
 	"devDependencies": {
