--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 node_modules/
-# spring-internship-firebase-adminsdk-7z0b1-ad7d9b5ea2.json
-# .envs
+spring-internship-firebase-adminsdk-7z0b1-ad7d9b5ea2.json
+.env
 temp/
 cors.json
+Procfile
+UpNext
