git ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 node_modules/
-spring-internship-firebase-adminsdk-7z0b1-ad7d9b5ea2.json
 .env
-temp/
+tmp/
 cors.json
 Procfile
 UpNext
+spring-internship-firebase-adminsdk-7z0b1-ad7d9b5ea2.
+.gcloudignore
