--- a/functions/package.json
+++ b/functions/package.json
@@ -20,14 +20,11 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"firebase": "^7.14.2",
 		"firebase-admin": "^8.10.0",
 		"firebase-functions": "^3.3.0",
 		"firebaseui": "^4.5.0",
 		"form-parse": "file:middleware",
-		"gulp": "^4.0.2",
-		"gulp-strip-debug": "^3.0.0",
-		"multer": "^1.4.2",
-		"multer-google-storage": "^1.3.0",
 		"uuid": "^7.0.3"
 	},
 	"devDependencies": {
