--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "firebase": "^7.14.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
