--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-firebaseui": "^4.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-toastify": "^5.5.0"
+    "react-toastify": "^5.5.0",
+    "react-webcam": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
