--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,7 @@
 		"source": "functions"
 	},
 	"hosting": {
-		"public": "public",
+		"public": "./client/build",
 		"rewrites": [
 			{
 				"source": "**",
