--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,22 @@
 {
-	"functions": {
-		"predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint"],
-		"source": "functions"
-	},
-	"hosting": {
-		"public": "public",
-		"rewrites": [
-			{
-				"source": "**",
-				"function": "app"
-			}
-		],
-		"ignore": ["**/.*", "**/node_modules/**"]
-	}
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ],
+    "source": "functions"
+  },
+  "hosting": {
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
 }
