Commit before merging to new feature branch and making things local

--- a/functions/package.json
+++ b/functions/package.json
@@ -17,14 +17,17 @@
 		"@google-cloud/firestore": "^3.7.3",
 		"@google-cloud/storage": "^4.7.0",
 		"busboy": "^0.3.1",
+		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-session": "^1.17.1",
 		"firebase": "^7.14.2",
 		"firebase-admin": "^8.10.0",
 		"firebase-functions": "^3.3.0",
 		"firebaseui": "^4.5.0",
 		"form-parse": "file:middleware",
+		"memorystore": "^1.6.2",
 		"sessionstorage": "^0.1.0",
 		"uuid": "^7.0.3"
 	},
