--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,8 @@
 		"node": "10"
 	},
 	"dependencies": {
-		"@google-cloud/firestore": "^3.7.3",
+		"@google-cloud/connect-firestore": "^1.0.6",
+		"@google-cloud/firestore": "^3.8.0",
 		"@google-cloud/storage": "^4.7.0",
 		"busboy": "^0.3.1",
 		"cookie-parser": "^1.4.5",
@@ -27,7 +28,6 @@
 		"firebase-functions": "^3.3.0",
 		"firebaseui": "^4.5.0",
 		"form-parse": "file:middleware",
-		"memorystore": "^1.6.2",
 		"sessionstorage": "^0.1.0",
 		"uuid": "^7.0.3"
 	},
