--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "firebase": "^7.14.2",
+    "framer-motion": "^1.11.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-datepicker": "^2.14.1",
