--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,10 @@
     "dotenv": "^8.2.0",
     "firebase": "^7.14.2",
     "framer-motion": "^1.11.0",
+    "prop-types": "^15.7.2",
+    "ra-data-json-server": "^3.5.5",
     "react": "^16.13.1",
+    "react-admin": "^3.5.5",
     "react-bootstrap": "^1.0.1",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
