--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,8 @@
 		"shell": "firebase functions:shell",
 		"start": "npm run shell",
 		"deploy": "firebase deploy --only functions",
-		"logs": "firebase functions:log"
+		"logs": "firebase functions:log",
+		"functions": "firebase serve --only functions"
 	},
 	"engines": {
 		"node": "10"
