--- a/firebase.json
+++ b/firebase.json
@@ -13,6 +13,9 @@
         "function": "app"
       }
     ],
-    "ignore": ["**/.*", "**/node_modules/**"]
+    "ignore": [
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
 }
