--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "firebase": "^7.14.2",
     "framer-motion": "^1.11.0",
+    "material-table": "^1.60.0",
     "prop-types": "^15.7.2",
     "ra-data-json-server": "^3.5.5",
     "react": "^16.13.1",
