--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.10.1",
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -13,10 +14,12 @@
     "dotenv": "^8.2.0",
     "firebase": "^7.14.2",
     "framer-motion": "^1.11.0",
+    "material-table": "^1.60.0",
     "prop-types": "^15.7.2",
     "ra-data-json-server": "^3.5.5",
     "react": "^16.13.1",
     "react-admin": "^3.5.5",
+    "react-admin-firebase": "^3.1.24",
     "react-bootstrap": "^1.0.1",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
