I user, P  user , Admin Merged Successfully

--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "shortid": "^2.2.15"
   },
   "scripts": {
+    "functions": "firebase serve --only functions",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
