--- a/firebase.json
+++ b/firebase.json
@@ -1,21 +1,17 @@
 {
-  "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ],
-    "source": "functions"
-  },
-  "hosting": {
-    "public": "./client/build",
-    "rewrites": [
-      {
-        "source": "**",
-        "function": "app"
-      }
-    ],
-    "ignore": [
-      "**/.*",
-      "**/node_modules/**"
-    ]
-  }
+	"functions": {
+		"predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint"],
+		"source": "functions"
+	},
+	"hosting": {
+		"public": "./client/build",
+		"rewrites": [
+			{
+				"source": "**",
+				"destination": "/index.html",
+				"function": "app"
+			}
+		],
+		"ignore": ["**/.*", "**/node_modules/**"]
+	}
 }
