--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
 		"react-firebaseui": "^4.1.0",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.1",
+		"react-swipeable-views": "^0.13.9",
 		"react-toastify": "^5.5.0",
 		"react-webcam": "^5.0.1",
 		"shortid": "^2.2.15"
