--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
 		"@testing-library/user-event": "^7.2.1",
 		"axios": "^0.19.2",
 		"bootstrap": "^4.4.1",
+		"chart": "^0.1.2",
+		"chart.js": "^2.9.3",
 		"cors": "^2.8.5",
 		"crypto-js": "^4.0.0",
 		"dotenv": "^8.2.0",
 		"firebase": "^7.14.2",
 		"framer-motion": "^1.11.0",
+		"glamor": "^2.20.40",
 		"material-table": "^1.60.0",
 		"material-ui": "^0.20.2",
 		"prop-types": "^15.7.2",
@@ -24,6 +27,8 @@
 		"react-admin": "^3.5.5",
 		"react-admin-firebase": "^3.1.24",
 		"react-bootstrap": "^1.0.1",
+		"react-chartjs-2": "^2.10.0",
+		"react-countup": "^4.3.3",
 		"react-datepicker": "^2.14.1",
 		"react-dom": "^16.13.1",
 		"react-firebaseui": "^4.1.0",
